# lyvoxa

./: .gitignore  ARCHIVED.md  CHANGELOG.md  Cargo.toml  DEPENDABOT_FIX.md  Dockerfile  INSTALL_ARCH.md  LICENSE  Makefile  PKGBUILD  PKGBUILD-bin  QUALITY_CHECKS.md  QUICK_START_AUR.md  README.md  ROADMAP.md  SECURITY.md  benchmark.sh  build-arch-pkg.sh  build.sh  config.toml  deny.toml  docker-compose.yml  lyvoxa-maintain.sh  pre-commit.sh  rust-toolchain.toml  setup-git-hooks.sh  test-core-usage.sh  test-local.sh  test-version-system.sh  update-deps.sh  update-version.sh  verify-release.sh  version-manager.py  version.toml
.github/: AUR_SETUP.md  AUR_SSH_KEY_SETUP.md  AUTO_UPDATE.md  DEPENDABOT_QUICKSTART.md  DEPENDABOT_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: check-dependabot-config.sh  enable-automerge-for-prs.sh
.github/workflows/: aur-release.yml  auto-release-tag.yml  auto-update.yml  ci.yml  clone-detect.yml  codeql.yml  dco.yml  dependabot-auto-merge.yml  loc-badge.yml  release-request.yml  release.yml  scorecard.yml  version-bump.yml
.version-backups/backup_20250924_020238/: CHANGELOG.md  Cargo.toml  SECURITY.md
docs/: AUR_SSH_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDABOT.md  GITHUB_GPG_SETUP.md  GPG_SIGNING.md  INSTALL_ARCH.md  MAINTENANCE.md  PERFORMANCE_MONITORING.md  RELEASING.md  ROADMAP.md  SECURITY.md  SETUP_SSH_SIGNING.md  SSH_SIGNING_TROUBLESHOOTING.md  VERIFICATION.md  VERSION_MANAGEMENT.md
docs/badges/: loc.json
lyvoxa-aur-bin/: .SRCINFO  PKGBUILD  README.md
lyvoxa-bin/: .SRCINFO  PKGBUILD
scripts/: debug-ssh-key.sh  setup-ssh-signing.sh
src/: main.rs  monitor.rs  plugin.rs  simple.rs  theme.rs
