[package]
name = "lyvoxa"
version = "1.5.0"
edition = "2021"
description = "A high-performance system monitoring tool for Linux written in Rust"
authors = ["rezky_nightky"]
license = "GPL-3.0"
repository = "https://github.com/oxyzenQ/lyvoxa"
homepage = "https://github.com/oxyzenQ/lyvoxa"
documentation = "https://github.com/oxyzenQ/lyvoxa"
readme = "README.md"
keywords = ["system", "monitor", "performance", "tui", "linux"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lyvoxa"
path = "src/main.rs"

[[bin]]
name = "lyvoxa-simple"
path = "src/simple.rs"

[dependencies]
sysinfo = "0.29"
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
humansize = "2.1"
