[package]
name = "lyvoxa"
version = "1.5.0"
edition = "2021"
description = "A high-performance system monitoring tool for Linux written in Rust"
authors = ["rezky_nightky"]
license = "GPL-3.0"
repository = "https://github.com/oxyzenQ/lyvoxa"
homepage = "https://github.com/oxyzenQ/lyvoxa"
documentation = "https://github.com/oxyzenQ/lyvoxa"
readme = "README.md"
keywords = ["system", "monitor", "performance", "tui", "linux"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lyvoxa"
path = "src/main.rs"

[[bin]]
name = "lyvoxa-simple"
path = "src/simple.rs"

[dependencies]
sysinfo = "0.29"
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
humansize = "2.1"

# =============================================================================
# BUILD PROFILES - OPTIMIZED FOR LYVOXA
# =============================================================================

[profile.dev]
# Development profile - Fast incremental builds with debug info
opt-level = 0          # No optimization for faster compile times
debug = true           # Include debug symbols
split-debuginfo = "unpacked"  # Faster linking on Linux
incremental = true     # Enable incremental compilation
codegen-units = 256    # More codegen units for faster parallel compilation

[profile.release]
# Release profile - Optimized for performance and size
opt-level = 3          # Maximum optimization
debug = false          # No debug symbols in release
strip = true           # Strip symbols for smaller binary
lto = "thin"           # Link-time optimization (thin for faster builds)
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Abort on panic for smaller binary
overflow-checks = false # Disable overflow checks for performance

[profile.release-with-debug]
# Release with debug info for profiling
inherits = "release"
debug = true
strip = false

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = true
overflow-checks = false
