[package]
name = "lyvoxa"
version = "2.0.0"
edition = "2024"
description = "An optimized monitoring system linux"
authors = ["rezky_nightky"]
license = "GPL-3.0-only"
repository = "https://github.com/oxyzenQ/lyvoxa"
homepage = "https://github.com/oxyzenQ/lyvoxa"
documentation = "https://github.com/oxyzenQ/lyvoxa"
readme = "README.md"
keywords = ["system", "monitor", "performance", "tui", "archlinux"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lyvoxa"
path = "src/main.rs"

[dependencies]
sysinfo = "0.29"
crossterm = "0.29"
ratatui = "0.30.0-alpha.5"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
procfs = "0.16"
nix = { version = "0.27", features = ["signal", "resource"] }
libc = "0.2"
async-trait = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
obfstr = "0.4"

# =============================================================================
# BUILD PROFILES - OPTIMIZED FOR LYVOXA
# =============================================================================

[profile.dev]
# Development profile - Fast incremental builds with debug info
opt-level = 0                # No optimization for faster compile times
debug = true                 # Include debug symbols
split-debuginfo = "unpacked" # Faster linking on Linux
incremental = true           # Enable incremental compilation
codegen-units = 256          # More codegen units for faster parallel compilation

[profile.release]
# Release profile - Optimized for performance and size
opt-level = 3           # Maximum optimization
debug = false           # No debug symbols in release
strip = true            # Strip symbols for smaller binary
lto = "fat"             # Stronger cross-crate inlining for RE resistance
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Abort on panic for smaller binary
overflow-checks = false # Disable overflow checks for performance

[profile.release-with-debug]
# Release with debug info for profiling
inherits = "release"
debug = true
strip = false

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = true
overflow-checks = false
